infrastructure/api/02-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: kanban-api-service
spec:
 selector:
  app: kanban-api
 ports:
 - name: kanban-api-port
   port: 5000
   targetPort: 5000
