infrastructure/api/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kanban-api
  labels:
    name: kanban-api
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: "/api"
          backend:
            service:
              name: kanban-api-service
              port: 
                number: 5000
